Added book service

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="four wide column">
       <h4>Rating</h4>
-      <i class="yellow star icon" *ngFor="let r of getRating(book.rating)"></i>
+      <!--<i class="yellow star icon" *ngFor="let r of getRating(book.rating)"></i>-->
     </div>
   </div>
   <h4>Beschreibung</h4>
