--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<bm-book-list *ngIf="viewState === 'list'" (showDetailsEvent)="showDetails($event)"></bm-book-list>
-<bm-book-details *ngIf="viewState === 'details'" (showListEvent)="showList()" [book]="book"></bm-book-details>
+<div class="ui menu">
+  <a routerLink="home" routerLinkActive="active" class="item">Home</a>
+  <a routerLink="books" routerLinkActive="active" class="item">Bücher</a>
+</div>
+<router-outlet></router-outlet>
